--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>heart bubbles</title>
+<title>Happy Valentine's Day</title>
 <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -10,9 +10,8 @@
     <img src="./heart.png" alt="">
     <div class="lettre">
         <div>
-            HAPPY <br>
-            VALENTINE'S <br>
-            DAY
+            HAPPY VALENTINE'S <br>
+            DAY <br>
         </div>
     </div>
     <div class="front"></div>
